--- a/public/assets/css/layoutstyle.css
+++ b/public/assets/css/layoutstyle.css
@@ -107,6 +107,7 @@
 .job-list {
   display: flex;
   flex-wrap: wrap;
+  height: 100vh;
   gap: 1.5rem;
   padding: 2rem;
   background-color: #f6f6f6;
