--- a/view/dashboard/detail.ejs
+++ b/view/dashboard/detail.ejs
@@ -1,73 +1,25 @@
-<div class="card">
-  <div class="card-body">
-    <div class="container mt-5">
-      <div class="text-center mb-4">
-        <h2><%= context.article.title %></h2>
-        <p class="text-muted">Published on <em><%= context.article.updated_at%></em></p>
-        <p class="text-muted"> Kategori: <strong><%= context.article.category%></strong></p>
-      </div>
-      <div class="text-center mb-4">
-        <img src="http://localhost:8000/img/articles_image/<%= context.article.foto %>" alt="Gambar Artikel"
-          class="img-fluid rounded">
-      </div>
-      <div class="mb-5">
-        <p><%- context.article.content %></p>
-      </div>
-      <div class="text-muted  mb-5">
-        <span>Tags: </span>
-        <% for (let i = 0; i < context.tag.length; i++) { %>
-          <strong><span>#<%= context.tag[i] %></span></strong>
-        <% } %>
+<div class="card shadow rounded-4 p-5 mb-4 ml-5 mr-5">
+  <div class="d-flex justify-content-between align-items-start">
+    <div class="pl-4">
+      <h2 class="fw-bold mt-3 text-dark"><%= context.job.title %></h2>
+      <ul class="list-unstyled text-muted mb-2">
+        <li class="text-primary large mb-2 "><i class="fas fa-circle"></i> <%= context.job.type %></li>
+        <li class="mb-4"><i class="far fa-money-bill-alt"></i><%= formatCurrency(context.job.salary_min) %> – <%= formatCurrency(context.job.salary_max)  %>/month</li>
+      </ul>
+      <div class="d-flex gap-2 mt-5 ">
+        <a href="/admin/jobs/edit/<%= context.job.id %>" class="btn btn-warning rounded-pill px-4 mr-2"><i class="fas fa-chevron-left"></i> Back</a>
+        <a href="/admin/applications/<%= context.job.id %>" class="btn btn-outline-info rounded-pill px-4 mr-2"><i class="fas fa-address-card"></i> Apply</a>
       </div>
     </div>
-    <div id="comments-section" class="container mt-4">
-      <h3>Comments</h3>
-      <div id="comment-form">
-        <form action="/" method="POST">
-          <input type="text" value="<%= context.article.id %>" hidden id="article_id" name="article_id">
-          <input type="text" value="<%= context.user.id %>" hidden id="user_id" name="user_id">
-          <div class="form-group mt-3">
-            <input type="text" id="comment-text" name="comment" class="form-control" rows="3" placeholder="Tulis komentar Anda di sini" required>
-          </div>
-          <button type="submit" class="btn btn-primary mt-3"><i class="far fa-paper-plane"></i></button>
-        </form>
-      </div>
-      <% const renderComments = (comments) => { %>
-        <% comments.forEach(comment => { %>
-          <div class="comment-item" id="comment<%= comment.id %>">
-            <div class="comment-header">
-              <strong class="username"><%= comment.username %></strong>
-              <span class="time-posted"><%= comment.timeDifference %></span>
-            </div>
-            <p class="comment-content"><%= comment.content %></p>
-            <div class="comment-actions">
-              <a href="#" class="reply" data-article-id="<%= comment.article_id %>" data-user-id="<%= context.user.id %>" data-id="<%= comment.id %>">Balas</a>
-            </div>
-      
-            <div class="reply-input-container" id="reply-input-container-<%= comment.id %>"></div>
-      
-            <% if (comment.children && comment.children.length > 0) { %>
-              <div class="replies hidden" id="replies-<%= comment.id %>">
-                <% comment.children.forEach(reply => { %>
-                  <div class="reply-item" id="comment<%= comment.id %>">
-                    <div class="reply-header">
-                      <strong class="username"><%= reply.username %></strong>
-                      <span class="time-posted"><%= reply.timeDifference %></span>
-                    </div>
-                    <p class="reply-content"><%= reply.content %></p>
-                  </div>
-                <% }); %>
-              </div>
-              <a href="#" class="show-replies" data-id="<%= comment.id %>">Lihat balasan selengkapnya</a>
-            <% } %>
-          </div>
-        <% }); %>
-      <% } %>
-      
-      <% renderComments(context.comments) %>
+    <div>
+      <p class="badge bg-primary border border-info p-2 bold mb-5"> <%= context.job.timeDifference %></p>
     </div>
   </div>
+
+  <hr class="my-4">
+
+  <div class="pl-4 text-dark">
+    <h5 class="fw-semibold">Job Descriptions</h5> <hr>
+    <p class="text-muted"><%- context.job.description %></p>
+  </div>
 </div>
-
-<script src="/assets/js/comment.js"></script>
-
