--- a/view/dashboard/index.ejs
+++ b/view/dashboard/index.ejs
@@ -1,22 +1,44 @@
-<!-- Article Items -->
-<% context.articles.forEach(article => { %>
-<div class="post-item">
-  <a href="/<%= article.id %>">
-    <div class="post-info">
-      <img src="http://localhost:8000/img/articles_image/<%= article.foto %>" alt="Article Image" class="article_img">
-      <div>
-        <p class="title"><%= article.title %></p>
-        <p class="post-time"><%= article.timeDifference %></p>
-      </div>
+<div class="card-body bg-white">
+  <div class="row mr-3 ml-5">
+    <% if (context.jobs && context.jobs.length > 0) { %>
+      <% context.jobs.forEach(job => { %>
+        <!-- CARD START -->
+        <div class="job-card">
+          <a href="/<%= job.id %>">
+            <h3 class="job-title"><%= job.title %></h3>
+            <p class="job-type fulltime text-warning mt-2"><i class="far fa-user"></i> <%= job.type %></p>
+            <p class="salary"><i class="far fa-money-bill-alt"></i> <%= formatCurrency(job.salary_min) %> – <%= formatCurrency(job.salary_max)  %>/month</p>
+            <p class="desc mt-4 text-dark"><span class="text-danger"><i class="fas fa-thumbtack"></i></span> <%= job.description %></p>
+            <p class="text-primary small mt-2"><%= job.timeDifference %></p>
+          </a>
+        </div>
+        <!-- CARD END -->
+      <% }) %>
+    <% } else { %>
+      <p class=" text-bold bg-danger p-3">We don't have the job you want !!.</p>
+    <% } %>
+  </div>
+  <div style="display: flex; flex-direction:row-reverse;">
+    <div class="pagination">
+      <% if (context.currentPage > 1) { %>
+      <a class="btn btn-secondary mr-1"
+        href="?page=<%= context.currentPage - 1 %>&limit=<%= context.limit %>">Previous</a>
+      <% } %>
+
+      <% for (let i = 1; i <= context.totalPages; i++) { %>
+      <% if (i === context.currentPage) { %>
+      <span class="btn btn-primary mr-1"><%= i %></span>
+      <% } else { %>
+      <a class="btn btn-light mr-1"
+        href="?page=<%= i %>&limit=<%= context.limit %>"><%= i %></a>
+      <% } %>
+      <% } %>
+
+      <% if (context.currentPage < context.totalPages) { %>
+      <a class="btn btn-secondary"
+        href="?page=<%= context.currentPage + 1 %>&limit=<%= context.limit %>">Next</a>
+      <% } %>
     </div>
-    <p class="post-content"><%= article.content %></p>
-    <a href="/<%= article.id %>" class="read-more">Read More...</a>
-    <div class="post-actions">
-      <span>
-        <a href="/<%= article.id %>#comments-section">💬 <%= article.comment_count %></a>
-      </span>
-    </div>
-  </a>
+  </div>
 </div>
-<% }) %>
 
