--- a/public/assets/css/layoutstyle.css
+++ b/public/assets/css/layoutstyle.css
@@ -14,6 +14,10 @@
   text-align: center;
   font-weight: bold;
   font-size: 1.5rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 .navbar {
@@ -103,15 +107,92 @@
   object-fit: cover;
 }
 
+/* Tombol hamburger */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.hamburger div {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  border-radius: 2px;
+}
+
+/* Dropdown menu (hidden by default) */
+.nav-links-mobile {
+  display: none;
+  flex-direction: column;
+  background-color: #000336;
+  padding: 1rem 2rem;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+}
+
+.nav-links-mobile li {
+  margin-top: 10px;
+}
+
+/* Responsif untuk layar kecil */
+@media screen and (max-width: 768px) {
+  .nav-links {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .nav-links-mobile.show {
+    display: flex;
+  }
+
+  .navbar {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .navbar-right {
+    align-self: flex-end;
+  }
+
+  .logo {
+    width: 150px;
+  }
+
+  .form-inline {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .form-control {
+    width: 100%;
+  }
+}
+
 /* Layout utama dengan flexbox */
 .job-list {
   display: flex;
   flex-wrap: wrap;
-  height: 100vh;
   gap: 1.5rem;
   padding: 2rem;
   background-color: #f6f6f6;
   justify-content: flex-start;
+  padding-top: 25vh;
+  min-height: 100vh;
+}
+
+@media screen and (min-width: 993px) {
+  .job-list {
+    min-height: 100vh;
+  }
 }
 
 /* Job Card */
