--- a/view/dashboard/detail.ejs
+++ b/view/dashboard/detail.ejs
@@ -12,13 +12,12 @@
           </li>
         </ul>
         <div class="d-flex flex-wrap gap-2 mt-4">
+          <a href="<%= context.from %>" class="btn btn-outline-warning rounded-pill px-4 mr-1"><i class="fas fa-chevron-left"></i> Back</a>
           <% if (!context.hasApplied) { %>
-            <a href="/" class="btn btn-outline-warning rounded-pill px-4 mr-1"><i class="fas fa-chevron-left"></i> Back</a>
             <a href="/admin/applications/<%= context.job.id %>" class="btn btn-outline-info rounded-pill px-4 ml-1">
               <i class="fas fa-external-link-alt"></i> Apply
             </a>
           <% } else { %>
-            <a href="/user/profile/<%= context.user.id %>" class="btn btn-outline-warning rounded-pill px-4 mr-1"><i class="fas fa-chevron-left"></i> Back</a>
             <span class="text-white px-4 py-2 rounded-pill text-capitalize
               <%= context.application[0].status === 'submitted' ? 'bg-primary' : 
                   context.application[0].status === 'reviewed' ? 'bg-secondary' :
