--- a/view/profile/index.ejs
+++ b/view/profile/index.ejs
@@ -8,14 +8,16 @@ e<div class="container my-4">
         <p class="mb-1"><i class="fas fa-envelope-open pr-1 mb-2"> </i> <%= context.user.email %></p>
         <p class="mb-1"><i class="fas fa-phone pr-1 mb-2"> </i> <%= context.profile.phone %></p>
         <p class="mb-1"><i class="fas fa-map pr-1 mb-2"> </i> <%= context.profile.address %></p>
+        <% if (context.resume) { %>
         <a href="<%= context.resume.file_url %>" target="_blank" class="btn btn-outline-success p-2 px-4 mt-3 mb-3">
           <i class="fas fa-external-link-alt"> </i> Resume
         </a>
+        <% } %>
       </div>
 
       <div class="col-lg-4 col-md-5 col-sm-12 d-flex justify-content-center mt-3">
         <!-- Kanan: Tombol Update -->
-        <a href="/user/edit-profile" class="btn btn-warning p-2 px-4 ml-1">
+        <a href="/user/profile/update/<%= context.user.id %>" class="btn btn-warning p-2 px-4 ml-1">
           <i class="	fas fa-pencil-alt"></i> Update
         </a>
         <!-- Kanan: Tombol logout -->
@@ -26,7 +28,7 @@ e<div class="container my-4">
     </div>
     
   </div>
-  <div class="card border shadow rounded-4 p-4 bg-white">
+  <div class="card border shadow rounded-4 p-4 bg-white" id="jobs">
     <div class="card-header">
       <h2 class="text-center">Your Jobs</h2>
     </div>
@@ -50,29 +52,29 @@ e<div class="container my-4">
           <% if (context.jobs && context.jobs.length > 0) { %>
             <% context.jobs.forEach(job => { %>
               <!-- CARD START -->
-              <div class="job-card">
-                <a href="/<%= job.id %>">
+              <a href="/<%= job.id %>?from=<%= encodeURIComponent('/user/profile/' + context.user.id + '/#jobs') %>"  class="job-card">
+                <div>
                   <h3 class="job-title"><%= job.title %></h3>
                   <p class="job-type fulltime text-warning mt-2"><i class="far fa-user"></i> <%= job.type %></p>
                   <p class="salary"><i class="far fa-money-bill-alt"></i> <%= formatCurrency(job.salary_min) %> – <%= formatCurrency(job.salary_max)  %>/month</p>
                   <p class="desc mt-4 text-dark"><span class="text-danger"><i class="fas fa-thumbtack"></i></span> <%= job.description %></p>
                   <p class="text-primary small mt-2"><%= job.timeDifference %></p>
                   <p class="badge small mt-2 p-2
-                    <%= job.status === 'submitted' ? 'bg-primary' : 
-                        job.status === 'reviewed' ? 'bg-secondary' :
-                        job.status === 'interview' ? 'bg-warning' :
-                        job.status === 'hired' ? 'bg-success' :
-                        job.status === 'rejected' ? 'bg-danger' : 
+                    <%= job.applicationStatus === 'submitted' ? 'bg-primary' : 
+                        job.applicationStatus === 'reviewed' ? 'bg-secondary' :
+                        job.applicationStatus === 'interview' ? 'bg-warning' :
+                        job.applicationStatus === 'hired' ? 'bg-success' :
+                        job.applicationStatus === 'rejected' ? 'bg-danger' : 
                         'bg-light text-dark' 
                     %>">
-                    <%= job.status %>
+                    <%= job.applicationStatus %>
                   </p>
-                </a>
-              </div>
+                </div>
+              </a>
               <!-- CARD END -->
             <% }) %>
           <% } else { %>
-            <p class=" text-bold bg-danger p-3">We don't have the job you want !!.</p>
+            <p class=" text-bold bg-danger p-3">You don't have an applications yet !!.</p>
           <% } %>
         </div>
         <div style="display: flex; flex-direction:row-reverse;">
