--- a/view/dashboard/detail.ejs
+++ b/view/dashboard/detail.ejs
@@ -14,7 +14,11 @@
         <div class="d-flex flex-wrap gap-2 mt-4">
           <a href="<%= context.from %>" class="btn btn-outline-warning rounded-pill px-4 mr-1"><i class="fas fa-chevron-left"></i> Back</a>
           <% if (!context.hasApplied) { %>
-            <a href="/admin/applications/<%= context.job.id %>" class="btn btn-outline-info rounded-pill px-4 ml-1">
+            <% if (!context.profile || !context.resume) { %>
+            <a href="/user/profile/update/<%= context.user.id %>" class="btn btn-outline-info rounded-pill px-4 ml-1">
+            <% } else { %>
+              <a href="/apply/<%= context.job.id %>" class="btn btn-outline-info rounded-pill px-4 ml-1">
+            <% } %>
               <i class="fas fa-external-link-alt"></i> Apply
             </a>
           <% } else { %>
