--- a/public/assets/css/formUpdate.css
+++ b/public/assets/css/formUpdate.css
@@ -1,16 +1,18 @@
 .form-container {
-  background-color: #2c2c2c;
-  margin: 15px 0;
-  padding: 15px;
+  background-color: #fff;
+  margin: 5% 10%;
+  padding: 5% 10%;
   border-radius: 8px;
+  width: 100%;
 }
 
 .form-header {
-  padding: 8px;
+  padding-top: 8px;
 }
 
 .form-header h3 {
   margin-bottom: 8px;
+  color: #FF66C4;
 }
 
 .form-header p {
@@ -20,14 +22,10 @@
 
 .profile-form table {
   width: 98%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-collapse: collapse;
   border-spacing: 0;
   padding-top: 20px;
   display: table;
-  border-collapse: separate;
   box-sizing: border-box;
   text-indent: initial;
   border-spacing: 2px;
@@ -61,7 +59,21 @@ td {
   color: #8a8a8a;
 }
 
-.profile-form input:focus {
+.profile-form textarea {
+  width: 100%;
+  padding: 2px 0 2px 8px;
+  border-radius: 8px;
+  border: 1px solid #8b8b8b;
+  margin: 0 8px 8px 0;
+  text-rendering: auto;
+  letter-spacing: normal;
+  word-spacing: normal;
+  border-color: #8b8b8b;
+  background: none;
+  filter: none;
+}
+
+.profile-form input:focus, .profile-form textarea:focus {
   border: 1px solid #FF66C4;
   outline: none;
 }
@@ -69,6 +81,7 @@ td {
 label {
   display: block;
   margin: 0 5px 0 18px;
+  color: #000336;
 }
 
 .profile-form button {
@@ -84,4 +97,25 @@ label {
 
 .profile-form button:hover {
   background-color: #2F84B5;
+}
+
+@media screen and (max-width: 768px) {
+  .form-container {
+    padding: 6% 5%;
+  }
+
+  .profile-form table {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  td {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .profile-form button,
+  .profile-form .btn-warning {
+    width: 100%;
+  }
 }
